# rtic-demo-memory

./: Cargo.toml  memory.x
src/: lib.rs  main.rs
